fix: minor alignment overflowing issue of text editor container

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 
 .content-editable {
   height: 400px;
-  width: 100%;
   padding-top: 2px;
   padding-left: 16px;
   border: 1px solid black;
